index.htmlを移動しました。 WebContentファイルを削除しました。 リクエスト文から要求されたファイル名を読みとり、リクエストを 表示するCheackRequest関数を完成させました。 レスポン文を生成し、レスポンス文を作成するCreateResponse関数を 完成させました。

--- a/Mission3/src/index.html
+++ b/Mission3/src/index.html
@@ -2,10 +2,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <TITLE>ログオン</TITLE>
-<LINK rel="stylesheet" href="exercise.css" type="text/css">
 </head>
 <body>
-	<h1>EIMS</h1>
+	<Div Align="center"><h1>EIMS</h1></Div>
 	<form action="LogonServlet" method="post">
 		<input type="hidden" name="page" value="logon">
 		<Div Align="center">
