--- a/Mission3/src/index.html
+++ b/Mission3/src/index.html
@@ -1,24 +1,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<TITLE>ログオン</TITLE>
+<TITLE>Hello World!</TITLE>
 </head>
 <body>
-	<Div Align="center"><h1>EIMS</h1></Div>
-	<form action="LogonServlet" method="post">
-		<input type="hidden" name="page" value="logon">
-		<Div Align="center">
-			社員番号&nbsp;&nbsp;&nbsp;<input type="text" name="id">
-		</Div>
-		<br />
-		<Div Align="center">
-			パスワード&nbsp;<input type="password" name="password">
-		</Div>
-		<br />
-		<Div Align="center">
-			<input type="submit" value="ログオン" />
-		</Div>
-	</form>
-
+	<Div Align="center"><h1>Hello World!</h1></Div>
+	<Div Align="center"><a href="EIMS.html">EIMS</a></Div>
 </body>
 </html>
