WebContentフォルダにfavicon.ionファイルを追加しました。 index.htmlファイルとEIMS.htmlファイルを編集しました。

--- a/Mission3/WebContent/EIMS.html
+++ b/Mission3/WebContent/EIMS.html
@@ -4,7 +4,7 @@
 <TITLE>ログオン</TITLE>
 </head>
 <body>
-	<h1>EIMS</h1>
+	<Div Align="center"><h1>EIMS</h1></Div>
 	<form action="LogonServlet" method="post">
 		<input type="hidden" name="page" value="logon">
 		<Div Align="center">
@@ -14,11 +14,6 @@
 		<Div Align="center">
 			パスワード&nbsp;<input type="password" name="password">
 		</Div>
-		<br />
-		<Div Align="center">
-			<input type="submit" value="ログオン" />
-		</Div>
 	</form>
-
 </body>
 </html>
