--- a/Mission3/WebContent/index.html
+++ b/Mission3/WebContent/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link rel="shortcut icon" href="WebContent/favicon.ico"/>
 <TITLE>Hello World!</TITLE>
 </head>
 <body>
 	<Div Align="center"><h1>Hello World!</h1></Div>
-	<Div Align="center"><a href="EIMS.html">EIMS</a></Div>
+	<Div Align="center"><a href="EIMS.html">EIMS</a></Div><br>
+	<Div Align="center"><img border="0" src="hanabi.jpg" width="128" height="128" alt="画像1"></Div>
 </body>
 </html>
